<resources>
    <string name="app_name">MyStudies</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="login_not_registered_text">Not registered? Click Here to Sign up!</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="register_button_text">Register</string>
    <string name="register_registered_button_text">Already Registered? Click Here to Login!</string>
    <string name="register_username_hint">Username</string>
    <string name="register_name_hint">Name</string>
    <string name="register_email_hint">Email</string>
    <string name="register_password_hint">Password</string>
</resources>
