<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.itsli.mystudies.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="25dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="40dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/username_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:theme="@style/EditTextHint"
                app:hintTextAppearance="@style/TextInputLayout">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!£$%^*().,"
                    android:ems="15"
                    android:hint="@string/login_username_hint"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="#ffffff"
                    android:textSize="25sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:theme="@style/EditTextHint"
                app:hintTextAppearance="@style/TextInputLayout"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!£$%^*().,"
                    android:ems="15"
                    android:hint="@string/login_password_hint"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:textColor="#ffffff"
                    android:textSize="25sp" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/login_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@color/login_button_background"
                android:text="@string/login_button_text"
                android:textColor="@color/colorAccent" />

            <Button
                android:id="@+id/link_to_register"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dip"
                android:background="@null"
                android:text="@string/login_not_registered_text"
                android:textAllCaps="false"
                android:textColor="@color/login_button_text_colour"
                android:textSize="15dp" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
